restore previous Kmeans notebook

--- a/Anls_Kmeans.ipynb
+++ b/Anls_Kmeans.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Analysis: K-means for destination clustering\n",
+    "\n",
+    "## This notebook:\n",
+    "1. clusters destinations based on popularity (bikes received) by events\n",
+    "2. backtracks the cutpoints of cluster labels (**THIS SECTION IS CURRENTLY LOST DUE TO CORRUPTED FILE**)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -249,7 +260,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('SelectRecords_EndTime_subset_800m_Basketball.csv')\n",
+    "df = pd.read_csv('subset_records_800m_Basketball.csv')\n",
     "df.head()"
    ]
   },
@@ -532,7 +543,7 @@
     "\n",
     "#plt.xlim(-74.1,-73.9)\n",
     "plt.title('Kmeans-{} clusters'.format(n))\n",
-    "plt.savefig('KM_family.png',dpi=400)\n",
+    "plt.savefig('km1_basketball.png',dpi=400)\n",
     "plt.show()"
    ]
   },
